php/inventoryforexperience/service.yml
apiVersion: v1
kind: Service
metadata:
  name: inventoryforexperiencephp
  namespace: bbs
  labels:
    app: inventoryforexperiencephp
spec:
  ports:
  - port: 9010
    targetPort: 80
    name: http
  clusterIP: None
  selector:
    app: inventoryforexperiencephp
