php/inventoryforexperience/ingress_https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: inventoryforexperiencephp-ingress
  namespace: bbs
spec:
  tls:
  - hosts:
    - baojunev.com
    secretName: ingress-secret
  rules:
  - host: inventory2.baojunev.com
    http:
      paths:
      - path: /inventoryforexperience
        backend:
          serviceName: inventoryforexperiencephp
          servicePort: 9010
  - host: inventory.baojunev.com
    http:
      paths:
      - path: /inventoryforexperience
        backend:
          serviceName: inventoryforexperiencephp
          servicePort: 9010
